--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.59.6",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
